<resources>
	<string name="app_name">Magic Poker</string>
	<string name="currency">$</string>
	<string name="title_activity_game">Game</string>
	<string name="tip_reraise_rule">Double the previous raise</string>
	<string name="start">START</string>
	<string name="skip">SKIP</string>
	<string name="busted">BUSTED</string>
	<string name="winner">WINNER</string>
	<string name="check">CHECK</string>
	<string name="fold">FOLD</string>
	<string name="call">CALL</string>
	<string name="raise">RAISE</string>
	<string name="all_in">ALL IN</string>
	<string name="high_card">HIGH CARD</string>
	<string name="one_pair">ONE PAIR</string>
	<string name="two_pairs">TWO PAIR</string>
	<string name="three_of_a_kind">THREE OF A KIND</string>
	<string name="straight">STRAIGHT\\</string>
	<string name="flush">FLUSH</string>
	<string name="full_house">FULL HOUSE</string>
	<string name="four_of_a_kind">FOUR OF A KIND</string>
	<string name="straight_flush">STRAIGHT FLUSH</string>
	<string name="royal_flush">ROYAL FLUSH</string>
	<string name="new_game">NEW GAME</string>
	<string name="multiplayer">MULTIPLAYER</string>
	<string name="continue_">CONTINUE</string>
	<string name="store">STORE</string>
	<string name="settings">SETTINGS</string>
	<string name="poker_guide">POKER GUIDE</string>
	<string name="about">ABOUT</string>
	<string name="title_activity_store">Store</string>
	<string name="section_format">Hello World from section: %1$d</string>
	<string name="chips_and_gold"><![CDATA[CHIPS & GOLD]]></string>
	<string name="customization">CUSTOMIZATION</string>
	<string name="more_fun">MORE FUN</string>
	<string name="rules_of_the_game">Rules of the game</string>
	<string name="hand_ranks">Hand Ranks</string>
	<string name="pre_flop_strategy">Pre-Flop Strategy</string>
	<string name="bankroll_management">Bankroll Management</string>
	<string name="tight_aggressive">Tight-Aggressive</string>
	<string name="strategies">Strategies</string>
	<string name="position_basics">Position Basics</string>
	<string name="guide_positionBasics_title1">How position works</string>
	<string name="guide_positionBasics_para1">When you sit down at a poker table, the first thing to look out for is the dealer button. This small white disc shows you who the dealer is, so you can work out your own table position (where you are in the betting order).\n\nTo the left of the dealer, the first two seats are called the small blind and big blind. They start the betting with a fixed amount to get the action going.\n\nAfter that, the action moves clockwise round the table, with players choosing a slightly different strategy depending where they sit. The basic idea is simple. Play strong hands in early position , good hands in mid-position and a few more hands in late position . Our guide to starting hands will help you here, but first, here’s a rundown of the different positions and what they mean.</string>
	<string name="early_position">Early position</string>
	<string name="guide_positionBasics_para_early">The player to the left of the big blind is called \'under the gun\', as they’re the first to act (no pressure). Depending on the overall size of the table, this and the next seat are known as ‘early position’ and are the hardest to play, as you have no idea what anyone else is going to do. Therefore, in theory, you should only play the very best hands (pair of two 10s or higher, ace-king or ace-queen).\n\nDon\'t worry about having a bad seat when you sit down, because the dealer button moves each hand.</string>
	<string name="guide_positionBasics_para_mid">The next couple of seats are relatively good spots, as you get to see what the first players are up to. You can add a few more pairs and suited connectors to your repertoire here. In the next seat, called hijack (and a sort of halfway house between middle and late position), you should raise with any pair.</string>
	<string name="late_position">Late position</string>
	<string name="guide_positionBasics_late_para">Late position (the cutoff and button) are the best seats in poker, as you’ve had the chance to see what everyone else is doing. If everyone else has folded, you can have an average hand and still ‘steal the blinds’ (win the pot straightaway). This means you can raise with a lot more cards, like any ace where the other card is of the same suit, and all suited connectors.</string>
	<string name="the_blinds">The blinds</string>
	<string name="guide_positionBasics_blind_para">Finally, play comes back round to the blinds . Here, if most people have called, then you should call with a range of hands you’d play in late position. If there’s been a raise, stick with early position starting hands. If no-one’s raised yet, blinds also have the option to check (pass this turn to bet). But in cash games, it’s better to raise with good hands or fold.</string>
	<string name="guide_positionBasics_title6">Fold, call or raise?</string>
	<string name="guide_positionBasics_para6">In poker, you have three options: fold (throw away your cards), call (put in the same as the previous bet – if no-one’s raised, the same as the big blind) or raise. When you raise, you can bet any amount, as long as it\'s at least twice the previous bet. \n\nUsually, if your cards are worth playing, you’d raise to three or four times the previous bet. Why raise? Well, firstly, to build bigger pot – and win more money. It’s also to get players with weak hands to fold (fewer opponents mathematically improves your odds of winning, whatever your hand). \n\nIf someone’s raised in front of you, it’s wiser to call instead of raise – unless you have a really strong hand like a top pair (jacks or higher), or ace-king, ace-queen (in which case raise to three times the previous bet). If they raise again and you have two kings or two aces, go all-in. If not then call. \n\nIf no-one’s raised, it’s really a case of raise or fold. As a cash game player, this will give you more options after the flop and win you more hands. \n\nAfter the flop, things get a bit trickier, but the same principles apply – you can get away with things ‘on the button’ that you shouldn’t think of trying ‘under the gun’.</string>
	<string name="reading_your_opponent">Reading your opponent</string>
	<string name="mid_position">Mid-position</string>
	<string name="guide_tightAgressive_title1">Tight Aggressive Style</string>
	<string name="guide_tightAgressive_para1">\t\tTight-aggressive is the best way for a beginner to play, so here\'s a definition of \'tight\' and a definition of \'aggressive\' and how the two combine.\n \t\tAlthough there are numerous styles of play, and various players adapt their games to suit specific circumstances and opponents, one basic, successful Texas Hold\'em strategy is to play tight-aggressive poker.\n\n\t\t\'Tight\' means playing strong hands and folding weak ones. Meanwhile an \'aggressive\' player will bet and raise, and only rarely call. Somebody who plays tight and aggressive waits for profitable situations and consistently takes advantage of them. \n\n\tAs always in poker, there are many situations that demand slight deviations from the rules. But learn how to grasp the basics first and then take it from there.</string>
	<string name="keep_it_tight">KEEP IT TIGHT</string>
	<string name="guide_tightAgressive_para2">\tThere are 169 different starting hands in Texas Hold\'em, but most of the profit comes from only a few of them.\n\nSometimes you will be dealt premium hands – pocket aces and the like but more often you will get weak hands such as 10–5, or trash hands like 7_2. If you have a weak starting hand and your opponent has a strong one, you are at a significant disadvantage right from the start. \n\nEven professional poker players aren\'t able to make a long-term profit in these situations. It is therefore important to fold before the flop if you don\'t have a strong starting hand.\n\nThis playing style is called \'tight\', as you are very selective and only play hands where you think you have an advantage. At a table with nine players you should only play 15 to 20 per cent of the hands you are dealt, on average. This means you should fold before the flop in four out of five cases. \n\nSome opponents won\'t stick to this recommendation and play almost every hand, which is a style of play known as \'loose\'.</string>
	<string name="stay_aggressive">STAY AGGRESSIVE</string>
	<string name="guide_tightAgressive_para3">\tAggression is good in poker. It describes a style that involves frequent bets and raises, and calling rarely, in order to influence the game in your favour. Almost all successful poker professionals play aggressively. It\'s very important to bet consistently when you have the best hand so that the maximum amount of money goes into the pot.\n\nYou want your opponent to be calling if you have a hand that is favourite to win. \n\nIt is also profitable if all your opponents fold their cards, giving you the pot without having to show your hand. This is only possible if you are betting and raising a lot. \n\nIf you play passively (ie, the opposite of aggressively), then the pot stays small and you offer your opponent the chance of improving their hand. \n\nThey can check to see more cards, or to take the hand to showdown where you will be forced to show what you are holding.</string>
	<string name="guide_tightAgressive_title4">GATHERING AND USING INFORMATION</string>
	<string name="guide_tightAgressive_para4">\tPoker would be no fun if everyone\'s cards were always face up. This would mean people would always bet when they were ahead and fold when they were losing. Everyone would play perfectly and only the deal of the cards would decide the winner. \n\nIn reality, you cannot see your opponents\' hole cards and therefore the game is much more difficult and much more interesting. But a good player should always be trying to make an educated guess about their opponents\' hands. Although you can never be 100 per cent sure what they are holding, you can gather information by the way they act. \n\n The more information you have, the better you can play. \n\n As a very general rule, if an opponent bets or raises, he is telling you that his hand is strong. Similarly if he only calls, his hole cards can\'t be that bad and perhaps he is hoping to improve his hand by seeing the flop, turn or river. If he folds you don\'t have to worry about him; he has told you his cards were bad. \n\n If you have good position at the table, ideally on the button, you are last to act and so have the best chance to observe your opponents. Don\'t squander it. Pay close attention and listen to what your opponents are telling you through their decision-making.</string>
	<string name="guide_tightAgressive_para5">\tPoker novices typically want to play too many hands and play them weakly. They check or call rather than bet or raise. They play \'loose-passive\' instead of \'tight-aggressive\'. \n\n They play from early position, when minimal information is available, instead of waiting until later when they can act on what their opponents are telling them. Sometimes they compound this error by not paying attention and not making the most of their positional advantage. \n\n In practice it is not always possible to play tight-aggressive, but it is the best style for a novice player to get started.</string>
	<string name="conclusion">CONCLUSION</string>
	<string name="pref_title_sound_effect">Sound Effects</string>
	<string name="pref_title_background_sound">Backgournd Sound</string>
	<string name="pref_title_username">Username</string>
	<string name="pref_default_username">Fish</string>
	<string name="pref_title_humanCount">Multiplayer Count</string>
	<string name="key_humanCount">key_humanCount</string>
	<string name="key_soundEffect" translatable="false">key_soundEffect</string>
	<string name="key_backgroundSound" translatable="false">key_backgroundSound</string>
	<string name="key_username">key_username</string>
</resources>