<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<EditTextPreference
		android:capitalize="words"
		android:defaultValue="@string/pref_default_username"
		android:inputType="textCapWords"
		android:key="@string/key_username"
		android:maxLines="1"
		android:selectAllOnFocus="true"
		android:singleLine="true"
		android:title="@string/pref_title_username"/>

	<ListPreference
		android:defaultValue="@integer/pref_humanCount_default"
		android:entries="@array/pref_humanCount_list_titles"
		android:entryValues="@array/pref_humanCount_list_values"
		android:key="@string/key_humanCount"
		android:negativeButtonText="@null"
		android:positiveButtonText="@null"
		android:title="@string/pref_title_humanCount"/>


	<SwitchPreference
		android:defaultValue="true"
		android:key="@string/key_soundEffect"
		android:title="@string/pref_title_sound_effect"
		/>

	<SwitchPreference
		android:defaultValue="false"
		android:key="@string/key_backgroundSound"
		android:title="@string/pref_title_background_sound"/>
</PreferenceScreen>