<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  xmlns:tools="http://schemas.android.com/tools"
			  android:layout_width="wrap_content"
			  android:layout_height="match_parent"
			  android:layout_gravity="center"
			  android:gravity="center"
			  android:orientation="vertical"
			  tools:context=".activity.MainActivity">

	<!--Better create two styles for these button under 21 and above and another for the oldest versions -->
	<Button
		android:id="@+id/btn_continueGame"
		style="@style/Widget.AppCompat.Button.Colored"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:enabled="false"
		android:text="@string/continue_"
		android:textColor="@color/textcolor_circle"
		android:visibility="visible"
		/>

	<Button
		android:id="@+id/btn_startGame"
		style="@style/Widget.AppCompat.Button.Colored"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/new_game"
		/>


	<Button
		android:id="@+id/btn_pokerGuide"
		style="@style/Widget.AppCompat.Button.Colored"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/poker_guide"
		/>

	<Button
		android:id="@+id/btn_store"
		style="@style/Widget.AppCompat.Button.Colored"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/store"
		android:visibility="visible"
		/>

	<Button
		android:id="@+id/btn_customization"
		style="@style/Widget.AppCompat.Button.Colored"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/preference"
		android:visibility="visible"
		/>

	<Button
		android:id="@+id/btn_about"
		style="@style/Widget.AppCompat.Button.Colored"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/about"
		/>


</LinearLayout>